k8s/ldap-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ldap-ui
  template:
    metadata:
      labels:
        app: ldap-ui
    spec:
      containers:
        - name: ldap-ui
          image: gajjalasandeep/ldap-ui:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
