k8s/ldap-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-ui-svc
spec:
  selector:
    app: ldap-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
