k8s/ldap-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-ui-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ldap-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ldap-ui-svc
                port:
                  number: 80
